# dl03

./: .gitignore  README.md  Untitled-1.ipynb  Untitled-2.ipynb  benchmark.ipynb  day09-2-skin.ipynb  day09-3-skin-copy.ipynb  day09-4-skin-copy2.ipynb  day10-1-randomsplit.ipynb  day11-1-best.ipynb  main.py  main2.py  main3.py  pyproject.toml  restapi_client.ipynb  wd8_fine (1).ipynb  wd8_fine (2).ipynb  wd8_fine.ipynb
